syntax = "proto3";
package twitch;

option go_package = "github.com/autonomouskoi/twitch";

message ChatConfig {
    bool    enabled        = 1; // allow disabling chat
    string  profile        = 2; // default chat client and channel
    string  message_prefix = 3; // a prefix to add to all chat messages. Useful to make it clear that the message is coming from a bot
}

enum MessageTypeTwitchChatEvent {
    TWITCH_CHAT_EVENT_TYPE_MESSAGE_IN = 0;
}

enum MessageTypeTwitchChatRequest {
    TWITCH_CHAT_REQUEST_TYPE_SEND_REQ  = 0;
    TWITCH_CHAT_REQUEST_TYPE_SEND_RESP = 1;
}

message TwitchChatRequestSendRequest {
    string  text = 1;
}
message TwitchChatRequestSendResponse {}